--- a/.github/workflows/deploy_snippets.yaml
+++ b/.github/workflows/deploy_snippets.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'main'
     paths:
-      - 'snippets/**'
+      - 'src/snippets/**'
 
 jobs:
   deploy_snippets:
@@ -13,6 +13,5 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GH_PAT }}
+      
 
