--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "archiver": "^6.0.1",
     "autoprefixer": "^10.4.15",
     "classnames": "^2.3.2",
-    "fs-extra": "^11.1.1",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9"
+  },
+  "dependencies": {
+    "fs-extra": "^11.1.1"
   }
 }
