--- a/.github/workflows/deploy_snippets.yaml
+++ b/.github/workflows/deploy_snippets.yaml
@@ -26,12 +26,11 @@ jobs:
       - name: Create snippets
         run: node ./scripts/createSnippets.js
       - name: Upload snippets
-        with:
+        env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
         run: aws s3 cp ./snippets.json s3://team-thundercats/snippets.json
-
 
 
 
